# Lafiya-contract

./: .gitignore  AI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: fuzz_test.rs  lib.rs  test.rs
contracts/attester-registry/: Cargo.toml
contracts/multisig-account/: Cargo.toml
crates/lafiya-cli/: Cargo.toml
crates/lafiya-config/: Cargo.toml
docs/: error-codes.md  storage-cost.md
docs/adr/: 0000-template.md  0001-hash-only-on-chain-footprint.md  0002-contractclient-boundary.md  0003-single-admin-initial-model.md  0007-unscoped-multisig-authorization.md  README.md
docs/architecture/: event-indexing.md
docs/runbooks/: contract-upgrade.md
issues/: 01-ci-workflow-invalid-yaml-never-runs.md  02-main-branch-does-not-compile.md  03-pr94-batch-attester-merge-dropped-implementation.md  04-attester-registry-missing-ttl-extension-policy.md  05-attestation-revocation-semantics-undefined.md  06-attestation-registry-no-registry-repoint-path.md  07-multisig-unbounded-signature-list-budget-dos.md  08-multisig-account-no-ttl-extension-bricking-risk.md  09-multisig-ignores-auth-contexts-unscoped-authorization.md  10-docs-and-load-test-drifted-from-actual-contract-behavior.md
scripts/: bindings.sh  deploy-testnet.sh  init-contracts.sh  upgrade.sh
tests/integration/: run.sh
(+4 files in other folders)
