[package]
name = "attestation-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
attester-registry = { path = "../attester-registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
attester-registry = { path = "../attester-registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
