[package]
name = "attestation-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Only needed to register the real contract in integration tests. The
# release build calls attester-registry purely through the #[contractclient]
# interface in lib.rs, so its contract implementation never links into
# this crate's wasm.
attester-registry = { path = "../attester-registry", features = ["testutils"] }
proptest = "1"

[features]
testutils = ["soroban-sdk/testutils"]
